added content from the VSCode

--- a/blog/2022-05-26-1st-blog.md
+++ b/blog/2022-05-26-1st-blog.md
@@ -2,4 +2,14 @@
 title: 1st Blog
 slug: https://rads-site.netlify.app/blog/new
 ---
-Tghsttststtstebebbebebbe
+This is a test blog writteen from the repo 
+
+## Heading 2
+
+### Heading 3
+
+#### Heading 4
+
+```md
+Let's see how to [Create a page](./create-a-page.md).
+```
