Update blog “2022-05-26-1st-blog”

--- a/blog/2022-05-26-1st-blog.md
+++ b/blog/2022-05-26-1st-blog.md
@@ -4,16 +4,16 @@ slug: https://rads-site.netlify.app/blog/new
 ---
 This is a test blog writteen from the repo 
 
-
 ## Heading 2
+
 This will be new to the 
 
 ### Heading 3
 
-:::note
- This is a note
+`:::note
+ This is a note`
 
-:::
+`:::`
 
 #### Heading 4
 
