--- a/blog/2022-05-26-1st-blog.md
+++ b/blog/2022-05-26-1st-blog.md
@@ -2,6 +2,14 @@
 title: 1st Blog
 slug: https://rads-site.netlify.app/blog/new
 ---
+
+
+```
+
+```
+
+![](/img/nference-clinical-nsights-logo.svg)
+
 This is a test blog writteen from the repo 
 
 ## Heading 2
