Update blog “2022-05-26-1st-blog”

--- a/blog/2022-05-26-1st-blog.md
+++ b/blog/2022-05-26-1st-blog.md
@@ -3,11 +3,8 @@ title: 1st Blog
 slug: https://rads-site.netlify.app/blog/new
 ---
 
- :::note
- This is a new test
- ::: 
 
-![](/img/nference-clinical-nsights-logo.svg)
+> ![](/img/nference-clinical-nsights-logo.svg)
 
 This is a test blog writteen from the repo 
 
@@ -16,7 +13,6 @@ This is a test blog writteen from the repo
 This will be new to the 
 
 ### Heading 3
-
 
 #### Heading 4
 
