--- a/blog/2022-05-26-1st-blog.md
+++ b/blog/2022-05-26-1st-blog.md
@@ -19,3 +19,8 @@ This will be new to the
 ```md
 Let's see how to [Create a page]
 ```
+
+1. This is numbered list
+2. This is two
+3. Thisis tree
+4.
