--- a/my-website/docs/2022-05-27-new-doc.md
+++ b/my-website/docs/2022-05-27-new-doc.md
@@ -2,7 +2,7 @@
 title: New doc
 slug: https://rads-site.netlify.app/docs/new/
 ---
-```
+```asp
 This is a code block
 ```
 
@@ -10,7 +10,17 @@ This is a code block
 
 Code loc
 
-:::note
-This is teh secodn nb
-
-:::
+<button class="accordion">Section 1</button>\
+<div class="panel">\
+  <p>Lorem ipsum...</p>\
+</div>\
+\
+<button class="accordion">Section 2</button>\
+<div class="panel">\
+  <p>Lorem ipsum...</p>\
+</div>\
+\
+<button class="accordion">Section 3</button>\
+<div class="panel">\
+  <p>Lorem ipsum...</p>\
+</div>
