--- a/my-website/docs/2022-05-27-new-doc.md
+++ b/my-website/docs/2022-05-27-new-doc.md
@@ -1,7 +1,23 @@
 ---
-title: New doc
+title: New document
 slug: https://rads-site.netlify.app/docs/new/
 ---
+<details>\
+<summary>Toggle me!</summary>\
+<div>\
+<div>This is the detailed content</div>\
+<br/>\
+<details>\
+<summary>\
+Nested toggle! Some surprise inside...\
+</summary>\
+<div>\
+😲😲😲😲😲\
+</div>\
+</details>\
+</div>\
+</details>
+
 ```asp
 This is a code block
 ```
@@ -11,6 +27,7 @@ This is a code block
 Code loc
 
 <button class="accordion">Section 1</button>\
+
 <div class="panel">\
   <p>Lorem ipsum...</p>\
 </div>\
