--- a/my-website/blog/2022-05-31-test-blog.md
+++ b/my-website/blog/2022-05-31-test-blog.md
@@ -2,10 +2,12 @@
 title: Test blog
 slug: /my-website/blog
 ---
-# Heading1
+# Heading1 
+
+
 
 ## Heading 2
 
-#### Heading 4
 
-### HEading 3
+
+### HEadi
