Update docs “2022-05-27-new-doc”

--- a/my-website/docs/2022-05-27-new-doc.md
+++ b/my-website/docs/2022-05-27-new-doc.md
@@ -1,6 +1,6 @@
 ---
 title: New document
-slug: my-website/docs/21-07-06/test
+slug: my-website/docs/21-07-06/radhika.md
 ---
 <details>\
 <summary>Toggle me!</summary>\
